fixed dark mode visual bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -379,6 +379,7 @@ body {
 
 .dark .react-calendar__navigation button {
   color: var(--cal-text) !important;
+  background: none !important;
 }
 
 .dark .react-calendar__navigation button:hover,
